Add mission loader

--- a/src/lrs_interfaces/CMakeLists.txt
+++ b/src/lrs_interfaces/CMakeLists.txt
@@ -23,6 +23,8 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/Point.msg"
   "msg/PointList.msg"
   "srv/FloodFill.srv"
+  "msg/Command.msg"
+  "srv/MissionCommand.srv"
 )
 
 ament_export_dependencies(rosidl_default_runtime)
