--- a/src/map_loader/CMakeLists.txt
+++ b/src/map_loader/CMakeLists.txt
@@ -20,6 +20,7 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(mavros_msgs REQUIRED)
+find_package(lrs_interfaces REQUIRED)
 
 include_directories(include)
 
@@ -29,9 +30,13 @@ ament_target_dependencies(map_loader_node rclcpp geometry_msgs mavros_msgs)
 add_executable(drone_controll_node src/DroneControll.cpp)
 ament_target_dependencies(drone_controll_node rclcpp geometry_msgs mavros_msgs)
 
+add_executable(mission_loader_node src/MissionLoader.cpp)
+ament_target_dependencies(mission_loader_node rclcpp lrs_interfaces)
+
 install(TARGETS 
   map_loader_node
   drone_controll_node
+  mission_loader_node
   DESTINATION lib/${PROJECT_NAME}
 )
 
